--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "Predis cache engine for CakePHP",
     "type": "cakephp-plugin",
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^5.5|^7.0",
-        "composer/installers": "^1.11",
+        "composer/installers": "^1.0",
         "cakephp/cakephp": "^2.4",
         "predis/predis": "^1.1"
     },
