--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php": "^5.5|^7.0",
+        "php": "^7.0",
         "composer/installers": "^1.0",
-        "cakephp/cakephp": "^2.4",
+        "cakephp/cakephp": "~3.6",
         "predis/predis": "^1.1"
     },
     "extra": {
