--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,21 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0",
-        "cakephp/cakephp": "~3.6",
+        "php": ">=7.4.0,<9",
+        "cakephp/cakephp": "^4.0|^5.0",
         "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
             "kbATeam\\CakePhpPredis\\": "src/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.10"
     }
 }
