--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.4.0,<9",
         "cakephp/cakephp": "^4.0|^5.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "ext-redis": "*"
     },
     "autoload": {
         "psr-4": {
