--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.4.0,<9",
-        "cakephp/cakephp": "^4.0|^5.0",
+        "cakephp/cakephp": "^5.0",
         "predis/predis": "^1.1",
         "ext-redis": "*"
     },
