--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4.0,<9",
+        "php": ">=7.4 <9",
         "cakephp/cakephp": "^5.0",
         "predis/predis": "^1.1",
         "ext-redis": "*"
