--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_version: [7.4, 8.0, 8.1, 8.2, 8.3]
+        php_version: [8.1, 8.2, 8.3]
     steps:
       - uses: actions/checkout@v3
       - uses: php-actions/composer@v6
         with:
           php_version: ${{ matrix.php_version }}
+          php_extensions: redis intl
 
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
