--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php_version: [7.2 7.4]
+        php_version: [7.2, 7.4]
     steps:
       - uses: actions/checkout@v3
       - uses: php-actions/composer@v6
