--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,16 @@
     "type": "cakephp-plugin",
     "license": "MIT",
     "minimum-stability": "stable",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/kamilwylegala/cakephp2-php8"
+        }
+    ],
     "require": {
-        "php": "^5.5|^7.0",
+        "php": "^8.0",
         "composer/installers": "^1.0",
-        "cakephp/cakephp": "^2.4",
+        "cakephp/cakephp": "dev-master",
         "predis/predis": "^1.1",
         "ext-redis": "*"
     },
