--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 .gitattributes  export-ignore
 .gitignore      export-ignore
+.github/        export-ignore
 vendor/         export-ignore
 composer.*      export-ignore
+phpstan.neon    export-ignore
 README.*        export-ignore
+LICENSE         export-ignore
