--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.0",
         "composer/installers": "^1.0",
-        "cakephp/cakephp": "^2.10",
+        "kba-team/cakephp": "^2.11",
         "predis/predis": "^1.1",
         "ext-redis": "*"
     },
